@@ -3160,6 +3160,11 @@ local inline int init_memory (struct argv_initparams *p) {
          mach_vm_allocate are in the range 2^33...2^47. */
       mem.heaps[0].heap_limit = 0x000200000000UL;
       mem.heaps[1].heap_limit = 0x400000000000UL;
+      #elif defined(UNIX_LINUX) && defined(ARM64)
+      /* On Linux/arm64, the available addresses are in the range 0..2^39,
+         and there is room from 0x003000000000 to 0x007000000000. */
+      mem.heaps[0].heap_limit = 0x003000000000UL;
+      mem.heaps[1].heap_limit = 0x007000000000UL;
       #elif defined(UNIX_FREEBSD) && defined(AMD64)
       mem.heaps[0].heap_limit = 0x001000000000UL;
       mem.heaps[1].heap_limit = 0x700000000000UL;
@@ -3205,6 +3210,13 @@ local inline int init_memory (struct argv_initparams *p) {
       mem.heaps[0].heap_hardlimit = 0x200000000000UL;
       mem.heaps[1].heap_limit = 0x200000000000UL; /* room until at least 0x400000000000 */
       mem.heaps[1].heap_hardlimit = 0x400000000000UL;
+      #elif defined(UNIX_LINUX) && defined(ARM64)
+      /* On Linux/arm64, the available addresses are in the range 0..2^39,
+         and there is room from 0x003000000000 to 0x007000000000. */
+      mem.heaps[0].heap_limit = 0x003000000000UL;
+      mem.heaps[0].heap_hardlimit = 0x005000000000UL;
+      mem.heaps[1].heap_limit = 0x005000000000UL;
+      mem.heaps[1].heap_hardlimit = 0x007000000000UL;
       #elif defined(TYPECODES) && (oint_addr_len+addr_shift > pointer_bitsize)
        #ifdef UNIX_DARWIN
       /* 'vmmap' shows that there is room between the malloc area at 0x01...... or 0x02......
